Fixed hr stretching viewport

--- a/static-server/css/main.css
+++ b/static-server/css/main.css
@@ -11,6 +11,10 @@ body {
     background: linear-gradient(to top, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     
 }
+
+hr {
+    max-width: 90% !important;
+}
 #banner {
     display: none;
 } 
